--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.schema-locations=classpath:db/schema.sql
 spring.sql.init.data-locations=classpath:db/data.sql
 
-springfox.documentation.swagger.v2.path=/rest/docs
+springfox.documentation.swagger.v2.path=/api-docs
